WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
57157
[Qt] QWebFrame::iconChanged() not emitted when icon is cached but not yet loaded
https://bugs.webkit.org/show_bug.cgi?id=57157
Summary
[Qt] QWebFrame::iconChanged() not emitted when icon is cached but not yet loaded
Andreas Kling
Reported
2011-03-26 11:43:21 PDT
If the page's icon is cached in the icon database, but has not been loaded from disk when WebCore asks for it, the QWebFrame::iconChanged() signal will not be emitted. In this case, the FrameLoader asks the FrameLoaderClient to wait for a notification from the IconDatabase that it's finished loading the icon. This mechanism is currently absent in WebKit/qt/
Attachments
Proposed patch
(10.44 KB, patch)
2011-03-26 11:49 PDT
,
Andreas Kling
kenneth
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2011-03-26 11:49:20 PDT
Created
attachment 87033
[details]
Proposed patch
WebKit Review Bot
Comment 2
2011-03-26 11:50:11 PDT
Attachment 87033
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit/qt/Api/qwebsettings.cpp', u'..." exit_code: 1 Source/WebKit/qt/WebCoreSupport/IconDatabaseClientQt.cpp:28: Found header this file implements before WebCore config.h. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] Source/WebKit/qt/WebCoreSupport/IconDatabaseClientQt.h:31: Header file should not contain WebCore config.h. Should be: alphabetically sorted. [build/include_order] [4] Total errors found: 2 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Kenneth Rohde Christiansen
Comment 3
2011-03-26 11:58:15 PDT
Comment on
attachment 87033
[details]
Proposed patch View in context:
https://bugs.webkit.org/attachment.cgi?id=87033&action=review
> Source/WebKit/qt/WebCoreSupport/IconDatabaseClientQt.cpp:61 > +void IconDatabaseClientQt::didRemoveAllIcons() > +{ > +}
Why not add notImplemented() in these?
Andreas Kling
Comment 4
2011-03-26 12:00:22 PDT
(In reply to
comment #3
)
> (From update of
attachment 87033
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=87033&action=review
> > > Source/WebKit/qt/WebCoreSupport/IconDatabaseClientQt.cpp:61 > > +void IconDatabaseClientQt::didRemoveAllIcons() > > +{ > > +} > > Why not add notImplemented() in these?
Because we don't want to do anything in these functions (for now, at least.) :)
Andreas Kling
Comment 5
2011-03-26 12:30:33 PDT
Landed in <
http://trac.webkit.org/changeset/82034
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug